Revamped config, updated dependencies.

--- a/config.ini
+++ b/config.ini
@@ -1,28 +1,36 @@
-# Parameter file for SKITLES data analysis
-
-# Detector noise and background model
+# Detector characteristics
 [detector]
-biasMean        = 100.
-biasStd         = 3.
-pCIC            = 0.014
-sCIC            = 2e-5
-EMgain          = 300
-preAmpGain      = 4
-bitDepth        = 14
-saturationLimit = 16 117
+name            = 'Andor DU-888'
+chip            = 'CCD201-20'
+xsize           = 1024
+ysize           = 1024
+stageCount      = 604
+#overscan1       = [0:1,0:1] #TODO how to handle overscans reasonably?
+#overscan2       = [0:1,0:1]
+#overscan3       = [0:1,0:1]
 
-# Spectrograph physical characteristics
-[spectrograph]
-Resolution                = 12000
-pinholeDiameterPhysical   = 0.75
-piholeDiameterAngleArcsec = 20.
-
-# Telescope physical characteristics
-[telescope]
-telescopeDiameter     = 0.05
-telescopeFocalLenght  = 750.
+[adc]
+preAmpGain      = 4 # TODO not used currently, needed if converted to electrons
+bitDepth        = 16
 
 # Image handling
 [image]
-exten = 0
+exten           = 0
+path            = "./"
+filecount       = 175
 
+[fit]
+biaslevel       = 100.
+readnoise       = 5.35
+p_pCIC          = 0.014
+p_sCIC          = 2e-5
+EMprob          = 0.01
+EMgain          = 300
+fit_Ndof        = 10
+fit_chi2        = 1
+fit_p           = 1
+
+[photoncounting]
+method          = 'threshold' # TODO include Bayes counting as well
+threshold       = 107
+saturationLimit = 16117
