Renamed configuration file, update config.

--- a/pc-tools.cfg
+++ b/pc-tools.cfg
@@ -13,11 +13,14 @@ stageCount      = 604
 preAmpGain      = 4 # TODO not used currently, needed if converted to electrons
 bitDepth        = 16
 
-# Image handling
-[image]
+# File handling
+[files]
 exten           = 0
-path            = "./"
+path            = './'
+histName        = ''
 filecount       = 175
+binValMin       = 0
+binValMax       = 2000
 
 [fit]
 biaslevel       = 100.
