--- a/pc-tools.cfg
+++ b/pc-tools.cfg
@@ -1,39 +1,37 @@
-# Detector characteristics
 [detector]
-name            = 'Andor DU-888'
-chip            = 'CCD201-20'
-xsize           = 1024
-ysize           = 1024
-stageCount      = 604
-#overscan1       = [0:1,0:1] #TODO how to handle overscans reasonably?
-#overscan2       = [0:1,0:1]
-#overscan3       = [0:1,0:1]
-biaslevel       = 100.
-readnoise       = 5.35
-p_pCIC          = 0.012
-p_sCIC          = 2e-5
-EMprob          = 0.01
-EMgain          = 300
+name = Andor DU-888
+chip = CCD201-20
+xsize = 1024
+ysize = 1024
+stagecount = 604
+biaslevel = -0.15361174867848731
+readnoise = 5.252662276075015
+p_pcic = 0.05091470133345325
+p_scic = 7.234487490262182e-05
+p_em = 0.009598549965699598
+systememgain = 300
+systemgain = 320.49832197404436
 
 [adc]
-preAmpGain      = 4 # TODO not used currently, needed if converted to electrons
-bitDepth        = 16
+preampgain = 4 # TODO not used currently, needed if converted to electrons
+bitdepth = 16
 
-# File handling
 [files]
-exten           = 0
-path            = './'
-histName        = ''
-filecount       = 175
-binValMin       = 0
-binValMax       = 2000
+exten = 0
+path = ./
+histname = bias-histogram.dat
+filecount = 37
+binvalmin = 0
+binvalmax = 2000
 
 [fit]
-fit_Ndof        = 10
-fit_chi2        = 1
-fit_p           = 1
+ignoreserialcic = False
+fit_ndof = 10
+fit_chi2 = 1
+fit_p = 1
 
 [pc]
-method          = 'threshold' # TODO include Bayes counting as well
-threshold       = 107
-saturationLimit = 16117
+method = threshold # TODO include Bayes counting as well
+threshold = 9 # ADU or electrons above bias level
+saturationlimit = 16117
+
