--- a/pc-tools.cfg
+++ b/pc-tools.cfg
@@ -4,23 +4,23 @@ chip = CCD201-20
 xsize = 1024
 ysize = 1024
 stagecount = 604
-biaslevel = 97.26599682294068
-readnoise = 5.2526622653591355
-p_pcic = 0.05091469648341491
-p_scic = 7.234489480655185e-05
-p_em = 0.009598550055810218
-systememgain = 300
-systemgain = 320.4983392518986
+biaslevel = 1311.4251866597047
+readnoise = 5.583215041994193
+p_pcic = 0.025084020868369004
+p_scic = 0.00013899633358975042
+p_em = 0.010632481012363927
+systememgain = 2444
+systemgain = 594.7360092741151
 
 [adc]
-preampgain = 4 # TODO not used currently, needed if converted to electrons
+preampgain = 4
 bitdepth = 16
 
 [files]
 exten = 0
 path = ./
 histname = bias-histogram.dat
-filecount = 37
+filecount = 21
 binvalmin = 0
 binvalmax = 2000
 
@@ -31,7 +31,6 @@ fit_chi2 = 1
 fit_p = 1
 
 [pc]
-method = threshold # TODO include Bayes counting as well
-threshold = 9 # ADU or electrons above bias level
+method = threshold
+threshold = 9
 saturationlimit = 16117
-
