--- a/pc-tools.cfg
+++ b/pc-tools.cfg
@@ -9,8 +9,11 @@ readnoise = 5.583215041994193
 p_pcic = 0.025084020868369004
 p_scic = 0.00013899633358975042
 p_em = 0.010632481012363927
-systememgain = 2444
 systemgain = 594.7360092741151
+overscan_xbeg = 1
+overscan_xend = 8
+overscan_ybeg = 0
+overscan_yend = 0
 
 [adc]
 preampgain = 4
