Add new config as well, wouldn't run with the old.

--- a/pc-tools.cfg
+++ b/pc-tools.cfg
@@ -4,12 +4,12 @@ chip = CCD201-20
 xsize = 1024
 ysize = 1024
 stagecount = 604
-biaslevel = 1311.4251866597047
+biaslevel = 100.4251866597047
 readnoise = 5.583215041994193
 p_pcic = 0.025084020868369004
 p_scic = 0.00013899633358975042
-p_em = 0.010632481012363927
-systemgain = 594.7360092741151
+p_em = 0.009632481012363927
+systemgain = 300
 overscan_xbeg = 1
 overscan_xend = 8
 overscan_ybeg = 0
@@ -36,4 +36,4 @@ fit_p = 1
 [pc]
 method = threshold
 threshold = 9
-saturationlimit = 16117
+crlimit = 16117
