Threshold estimator loops fixed, config value for NTE simulated data gain=3000, and find threshold with more decimals in output.

--- a/pc-tools.cfg
+++ b/pc-tools.cfg
@@ -4,28 +4,29 @@ chip = CCD201-20
 xsize = 1024
 ysize = 1024
 stagecount = 604
-biaslevel = 100.4251866597047
-readnoise = 5.583215041994193
-p_pcic = 0.025084020868369004
-p_scic = 0.00013899633358975042
-p_em = 0.009632481012363927
-systemgain = 300
-overscan_xbeg = 1
-overscan_xend = 8
+biaslevel = 131.65730859648374
+readnoise = 5.541459699681898
+p_pcic = 0.0011521208513942014
+p_scic = 6.712206105538832e-05
+p_em = 0.01301219705368739
+systemgain = 2461.860134498612
+overscan_xbeg = 0
+overscan_xend = 0
 overscan_ybeg = 0
 overscan_yend = 0
 
 [adc]
-preampgain = 4
+preampgain = 1
 bitdepth = 16
 
 [files]
 exten = 0
 path = ./
+searchfitsrecursive = True
 histname = bias-histogram.dat
-filecount = 21
+filecount = 3000
 binvalmin = 0
-binvalmax = 2000
+binvalmax = 20000
 
 [fit]
 ignoreserialcic = False
@@ -35,5 +36,6 @@ fit_p = 1
 
 [pc]
 method = threshold
-threshold = 9
-crlimit = 16117
+threshold = 15
+crlimit = 65000
+
